# 2025-CODERED-Hackathon

./: .gitignore  README.md  deploy_frontend.sh
Backend/api-gateway-go/: go.mod
Backend/api-gateway-go/cmd/server/: main.go
Backend/api-gateway-go/internal/ai/: embed.go  ollama.go  shim.go
Backend/api-gateway-go/internal/auth/: handlers.go  middleware.go  password.go  util.go
Backend/api-gateway-go/internal/cache/: cache.go  valkey.go
Backend/api-gateway-go/internal/clients/: inference.go  worker.go
Backend/api-gateway-go/internal/db/: db.go  repo.go
Backend/api-gateway-go/internal/handlers/: admin.go  ai.go  ingest.go  pipeline.go  report.go  search.go
Backend/api-gateway-go/internal/security/: csrf.go  middleware.go  ratelimit.go
Backend/api-gateway-go/internal/util/: chunk.go  http.go
Backend/climate-impact-platform/docs/: API.md  mitigation.md  sysoverview.md  tree.md
Backend/db/migrations/: 0001_init.sql  0002_pgvector.sql  0003_mitigations.sql  0004_auth.sql  0005_documents.sql
Backend/infra/nginx/: site.conf
Backend/ops/nginx/: codered.conf
Backend/services/worker-rust/: Cargo.toml
Backend/services/worker-rust/src/: crawl.rs  main.rs  scrape.rs  store.rs  types.rs
docs/: README.md  model.md  setup.md  tree.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/api/: client.js
frontend/src/app/: layout.js  page.js
frontend/src/app/about/: page.jsx
frontend/src/app/adminPanel/: page.jsx
frontend/src/app/components/Navbar/: Navbar.jsx
frontend/src/app/login/: page.jsx
frontend/src/app/logistics/: page.jsx
frontend/src/app/reviews/: page.jsx
